--- a/ch08s6.html
+++ b/ch08s6.html
@@ -23,7 +23,7 @@
 			<!-- Header division -->
 
 			<div id="header">
-				<a href="index.html"><h3 style="margin:0; color: white;">WATSON HOME</h3></a>
+				<a href="index.html"><h3 style="margin:0; color: white;">8.6 THE THREE PRIMARY CONTROL CONSTRUCTS</h3></a>
 			</div>
 			<!-- End header -->
 
@@ -90,12 +90,33 @@
 				</table>
 
 			</div>
+			<!--Floating nav -->
+				<!-- Previous -->
+				<style>
+				div.floating-previous
+				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; opacity:0.5;}
+				div.floating-previous a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+				</style>
+				<div class="floating-previous">
+				<a href="ch08s5.html">
+				<img style="border:0;" src="Images/left-arrow.png" alt="Previous page" width="40">
+				</a>
+				</div>
+				<!-- Next -->
+				<style>
+				div.floating-next
+				{position:fixed;z-index:200; left: auto; right:1px; top:45%; opacity:0.5;}
+				div.floating-next a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+				</style>
+				<div class="floating-next">
+				<a href="ch08s6p1.html">
+				<img style="border:0;" src="Images/right-arrow.png" alt="Next page" width="40">
+				</a>
+				</div>
+			<!-- End floating nav -->
 			<!-- End nav -->
 
 			<!-- Main content -->
-			<p class="Section">
-				8.6 The three primary control constructs
-			</p>
 
 			<p>
 				So far, in our study of Watson JavaScript we have looked at programs that can do rudimentary input and output of text strings and numbers, and perform simple calculations. But, what makes computers more than simple calculating devices is their ability to respond in different ways to different situations. In order to create programs capable of solving more complex tasks we need to examine how the basic instructions we have studied can be organized into higher-level constructs.
@@ -125,126 +146,13 @@
 				&nbsp;
 			</p>
 
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				var firstName; // Text
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="P55">
-				firstName = prompt("Please enter your first name.", "");
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				document.write("Hello ");
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				document.write(firstName);
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="Subfigure">
-				&nbsp;
-			</p>
-
-			<p class="P50">
-				document.writeln(". Nice to meet you.");
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="Figure">
-				&nbsp;
-			</p>
-
-			<p class="P25">
-				&nbsp;
-			</p>
+			<img src="Images/fig8-9.png" alt="A graphical representation of the “sequence” control construct" class="ImageTall">
 
 			<p class="Figure">
 				Figure 8.9: &nbsp; A graphical representation of the “sequence” control construct
 			</p>
 			<!-- End main content -->
+			<hr />
 			<p class="Emphasized">
 				<a href="#tippytop">Return to top</a>
 			</p>
@@ -263,12 +171,13 @@
 			<div>
 
 			</div>
-
+			<!--
 			<footer>
 				<p>
 					&copy; Copyright  by Burt
 				</p>
 			</footer>
+			-->
 		</div>
 	</body>
 </html>
