Missed opacity on some of the arrows. Opacitated now.

--- a/ch08s6p3.html
+++ b/ch08s6p3.html
@@ -101,7 +101,7 @@
 				<!-- Previous -->
 				<style>
 				div.floating-previous
-				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; overflow:none; scroll: none;}
+				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; overflow:none; scroll: none; opacity:0.5;}
 				div.floating-previous a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 				</style>
 				<div class="floating-previous">
@@ -112,7 +112,7 @@
 				<!-- Next -->
 				<style>
 				div.floating-next
-				{position:fixed;z-index:200; right: 1px; left:auto; top:45%; scroll: none;}
+				{position:fixed;z-index:200; right: 1px; left:auto; top:45%; scroll: none; opacity:0.5;}
 				div.floating-next a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 				</style>
 				<div class="floating-next">
