--- a/ch08s9.html
+++ b/ch08s9.html
@@ -100,7 +100,7 @@
 				<!-- Previous -->
 				<style>
 				div.floating-previous
-				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; overflow:none; scroll: none;}
+				{position:fixed;z-index:200;left:1px; right: auto; width:20px;top:45%; overflow:none; scroll: none; opacity:0.5;}
 				div.floating-previous a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 				</style>
 				<div class="floating-previous">
