--- a/testing/index.html
+++ b/testing/index.html
@@ -11,7 +11,7 @@
     <h1 id='testing!'>Testing!</h1>
     <div class="well">
       <div data-ng-repeat='item in items'>
-        <a data-ng-bind='item.name' data-ng-href='{{item.path}}'></a>
+        <a data-ng-bind='item.fullname' data-ng-href='{{item.path}}'></a>
       </div>
     </div>
   </div>
