Post-Thursday fixes
first off, we aren't using `sessionStorage` anymore. wasn't providing any speed
increases, and we could get the information other ways. this also means that
the pages no longer require the index to be loaded first. Secondly, the page
names ('Chapter' names) are static now, so each page can find itself in the
sequence. so it's basically where it was a week ago. Now, we expand it for
sections and figures.

--- a/testing/index.html
+++ b/testing/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class='container'>
-    <h1 id='title'></h1>
+    <h1>Table of Contents</h1>
 
     <div class="well">
       <span id='links' class='btn-group-vertical'></span>
